2008-11-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/input/Makefile.in: Skip Nag tests.

2008-11-26  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/input/elemnum.input.pamphlet: add many more tests for
	branchcuts, singularities, special values and behaviour under
	normalization / evaluation.  Many tests fail.

	* src/algebra/sf.spad.pamphlet, src/algebra/trigcat.spad.pamphlet:
	move RADCAT from sf to trigcat, where it belongs.  Add
	documentation concerning branchcuts to log, acos, asin, atan

2008-11-26  Martin Rubey  <martin.rubey@univie.ac.at>
	
	* src/algebra/unittest.spad.pamphlet: add testsuiteNoClear
	(testsuite now issues ")clear all") and testRealEquals,
	testComplexEquals that test for approximate equality

2008-11-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: Fix install of MTSCAT (and
	MTSCAT to CATDOMS).

2008-11-17  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/mts.spad.pamphlet, src/algebra/pscat.spad.pamphlet,
	src/algebra/Makefile.in, src/input/Makefile.in: add definitions
	for coefficient for multivariate series, some tests and some
	documentation

2008-11-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac: when building gcl use local copy of bfd
	library.

2008-11-07  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/float.spad.pamphlet,
	src/algebra/fspace.spad.pamphlet, src/algebra/sf.spad.pamphlet:
	remove superfluous signatures, implied by category membership

2008-11-04  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/combfunc.spad.pamphlet: Reorder documentation

2008-11-04  Martin Rubey  <martin.rubey@univie.ac.at>

	* contrib/emacs/fricas.el: Correct definition of fricas-run.

	* src/algebra/seg.spad.pamphlet: provide InputForm for
	Segment, SegmentBinding, UniversalSegment

	* src/algebra/mkfunc.spad.pamphlet: provide a packageCall variant
	in INFORM1 that returns InputForm of a function call with
	arguments.
