@@ -1,3 +1,12 @@
+2008-11-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/bootlex.lisp, src/interp/def.lisp,
+	src/interp/i-syscmd.boot, src/interp/macros.lisp,
+	src/interp/metalex.lisp, src/interp/msgdb.boot,
+	src/interp/parsing.lisp, src/interp/patches.lisp,
+	src/interp/record.boot, src/interp/sys-pkg.lisp,
+	src/interp/vmlisp.lisp:  Clean up stream usage.
+
 2008-11-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/input/Makefile.in: Skip Nag tests.
